# dmimgio

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  dmimgio.c  dmimgio.h
src/: Makefile  Makefile.am  Makefile.in  dmimgio.c  dmimgio.h  dmimgio.pc.in
